tasksCompletedDelete
