# src/api/tasks/index.ts
@@ -4,6 +4,7 @@ import {tasksPost} from "./tasksPost";
 import {tasksIdPatch} from "./tasksIdPatch";
 import {tasksIdDelete} from "./tasksIdDelete";
 import {tasksIdCompletedPut} from "./tasksIdCompletedPut";
+import {tasksCompletedDelete} from "./tasksCompletedDelete";
 
 export const tasksHandler: FastifyPluginCallback = (
     fastify: FastifyInstance,
@@ -24,6 +25,9 @@ export const tasksHandler: FastifyPluginCallback = (
 
     // PUT /tasks/{id}/completed
     tasksIdCompletedPut(fastify);
+
+    // DELETE /tasks/completed
+    tasksCompletedDelete(fastify);
 
     done();
 }
